# WEB_HW6

./: create_db.py  database.db  pyproject.toml  sql_1.sql  sql_10.sql  sql_2.sql  sql_3.sql  sql_4.sql  sql_5.sql  sql_6.sql  sql_7.sql  sql_8.sql  sql_9.sql
